WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149524
[WinCairo] Incorrect position for windowless plugins.
https://bugs.webkit.org/show_bug.cgi?id=149524
Summary
[WinCairo] Incorrect position for windowless plugins.
peavo
Reported
2015-09-24 07:57:45 PDT
In some cases, windowless plugins have incorrect position on WinCairo. I am seeing this at e.g.
https://tv.nrk.no/serie/nyheter/NNFA15092415/24-09-2015
Attachments
Patch
(1.60 KB, patch)
2015-09-24 08:00 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
Patch
(3.69 KB, patch)
2015-09-25 06:46 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2015-09-24 08:00:33 PDT
Created
attachment 261869
[details]
Patch
Alex Christensen
Comment 2
2015-09-24 11:14:54 PDT
Comment on
attachment 261869
[details]
Patch Brent, is this really AppleWin-specific? I'm not familiar with this code.
peavo
Comment 3
2015-09-24 11:30:15 PDT
I am seeing this bug with Flash 18. The behavior might be different with other versions/plugins, though ...
peavo
Comment 4
2015-09-25 06:46:38 PDT
Created
attachment 261923
[details]
Patch
peavo
Comment 5
2015-09-25 06:49:08 PDT
My bad, the device context transformation is correct, the problem is that it is performed in cases where it shouldn't (when the GraphicsContext hdc == nullptr).
Alex Christensen
Comment 6
2015-09-25 11:28:15 PDT
Comment on
attachment 261923
[details]
Patch Seems good.
peavo
Comment 7
2015-09-25 11:51:48 PDT
(In reply to
comment #6
)
> Comment on
attachment 261923
[details]
> Patch > > Seems good.
Thanks for reviewing :)
WebKit Commit Bot
Comment 8
2015-09-25 12:14:10 PDT
Comment on
attachment 261923
[details]
Patch Clearing flags on attachment: 261923 Committed
r190249
: <
http://trac.webkit.org/changeset/190249
>
WebKit Commit Bot
Comment 9
2015-09-25 12:14:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug