[WinCairo] Incorrect position for windowless plugins. https://bugs.webkit.org/show_bug.cgi?id=149524

Reviewed by Alex Christensen.

Source/WebCore:

Added method to get graphics context HDC.

* platform/graphics/GraphicsContext.h:
* platform/graphics/win/GraphicsContextWin.cpp:
(WebCore::GraphicsContext::getWindowsContext):
(WebCore::GraphicsContext::hdc):
(WebCore::GraphicsContextPlatformPrivate::save):

Source/WebKit/win:

Only perform the device context transformation if the plugin is painting
directly into the GraphicsContext HDC. The previous check was not correct
in all cases.

* Plugins/PluginViewWin.cpp:
(WebCore::PluginView::paint):


Canonical link: https://commits.webkit.org/167668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190249 268f45cc-cd09-0410-ab3c-d52691b4dbfc