Source/WebCore/platform/graphics/win/GraphicsContextWin.cpp
@@ -136,6 +136,14 @@ HDC GraphicsContext::getWindowsContext(const IntRect& dstRect, bool supportAlpha
     return m_data->m_hdc;
 }
 
+HDC GraphicsContext::hdc() const
+{
+    if (!m_data)
+        return nullptr;
+
+    return m_data->m_hdc;
+}
+
 #if PLATFORM(WIN)
 void GraphicsContextPlatformPrivate::save()
 {
